5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3989/executions/1590_1014.log
== TEST (2019-03-27 00:07:26) 
-- CODE:
totaldevendas = float(input("Total de vendas: "))
print(totaldevendas)

lucro = (totaldevendas)/100 * 0,3
print(lucro)



-- OUTPUT:
700.5
(0.0, 3)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 00:08:09) 
-- CODE:
totaldevendas = float(input("Total de vendas: "))
print(totaldevendas)

lucro = (totaldevendas) * 0,3/100
print(lucro)



-- EXECUTION TIME:
0.195724
-- TEST CASE 1:
---- input:
700.50
---- correct output:
210.15
---- user output:
700.5
(0.0, 0.03)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 00:08:11) 
-- CODE:
totaldevendas = float(input("Total de vendas: "))
print(totaldevendas)

lucro = (totaldevendas) * 0,3/100
print(lucro)



-- OUTPUT:
700.5
(0.0, 0.03)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 00:08:27) 
-- CODE:
totaldevendas = float(input(" "))
print(totaldevendas)

lucro = (totaldevendas) * 0,3/100
print(lucro)



-- OUTPUT:
700.5
(0.0, 0.03)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 00:08:46) 
-- CODE:
totaldevendas = float(input(" "))
print(totaldevendas)

lucro = (totaldevendas)/100 * 0,3
print(lucro)



-- OUTPUT:
700.5
(0.0, 3)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 00:10:15) 
-- CODE:
totaldevendas = float(input(" "))
lucro = totaldevendas * 0,3
print(lucro)


-- OUTPUT:
(0.0, 3)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 00:10:22) 
-- CODE:
totaldevendas = float(input(" "))
lucro = totaldevendas * 0,3
print(lucro)



-- OUTPUT:
(0.0, 3)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 00:10:26) 
-- CODE:
totaldevendas = float(input(" "))
lucro = totaldevendas * 0,3
print(lucro)



-- OUTPUT:
(0.0, 3)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 00:12:17) 
-- CODE:
var1 = float(input(" "))
lucro = var1 * 0.3
print(var1)
print(lucro)



-- OUTPUT:
700.5
210.15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 00:12:25) 
-- CODE:
var1 = float(input(" "))
lucro = var1 * 0.3
print(var1)
print(lucro)



-- OUTPUT:
700.5
210.15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 00:12:27) 
-- CODE:
var1 = float(input(" "))
lucro = var1 * 0.3
print(var1)
print(lucro)



-- EXECUTION TIME:
0.17219
-- TEST CASE 1:
---- input:
700.50
---- correct output:
210.15
---- user output:
700.5
210.15
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 00:12:47) 
-- CODE:
var1 = float(input(" "))
lucro = var1 * 0.3
print(var1)
print((round, lucro))



-- OUTPUT:
700.5
(<built-in function round>, 210.15)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 00:13:06) 
-- CODE:
var1 = float(input(" "))
lucro = var1 * 0.3
print(var1)
print((round lucro, 2))



-- ERROR:
File "XXXX", line 4
    print((round lucro, 2))
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 00:13:36) 
-- CODE:
var1 = float(input(" "))
lucro = var1 * 0.3
print(var1)
print (round(lucro,5))



-- OUTPUT:
700.5
210.15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 00:13:44) 
-- CODE:
var1 = float(input(" "))
lucro = var1 * 0.3
print(var1)
print (round(lucro,5))



-- EXECUTION TIME:
0.182079
-- TEST CASE 1:
---- input:
700.50
---- correct output:
210.15
---- user output:
700.5
210.15
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 00:13:48) 
-- CODE:
var1 = float(input(" "))
lucro = var1 * 0.3
print(var1)
print (round(lucro,5))



-- EXECUTION TIME:
0.185158
-- TEST CASE 1:
---- input:
700.50
---- correct output:
210.15
---- user output:
700.5
210.15
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 00:13:58) 
-- CODE:
var1 = float(input("Valor total de vendas: "))
lucro = var1 * 0.3
print(var1)
print (round(lucro,5))



-- OUTPUT:
700.5
210.15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 00:14:08) 
-- CODE:
var1 = float(input("Valor total de vendas: "))
lucro = var1 * 0.3
print(var1)
print (round(lucro,5))



-- EXECUTION TIME:
0.181173
-- TEST CASE 1:
---- input:
700.50
---- correct output:
210.15
---- user output:
700.5
210.15
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 00:15:02) 
-- CODE:
var1 = float(input("Valor total de vendas: "))
lucro = var1 * 0.3
print(var1)
print (round(lucro,5))



-- OUTPUT:
700.5
210.15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 00:15:34) 
-- CODE:
var1 = float(input("Valor total de vendas: "))
lucro = var1 * 0.3
print (round(lucro,5))



-- OUTPUT:
210.15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 00:15:47) 
-- CODE:
var1 = float(input("Valor total de vendas: "))
lucro = var1 * 0.3
print (round(lucro,5))



-- EXECUTION TIME:
0.152301
-- TEST CASE 1:
---- input:
700.50
---- correct output:
210.15
---- user output:
210.15
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
